feat: info > 新增 取得單一鸚鵡資料
